--- a/orgs/acme/domains/transport/projects/taxinyc/flows/prep/revenue_w_contract/verify_contract.ipynb
+++ b/orgs/acme/domains/transport/projects/taxinyc/flows/prep/revenue_w_contract/verify_contract.ipynb
@@ -187,7 +187,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "347bbec2-0066-4852-8954-e0890f8f8cb8",
      "showTitle": false,
@@ -353,10 +356,11 @@
     "base_environment": "",
     "environment_version": "2"
    },
+   "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7796718893244816,
+     "commandId": 2956002011967815,
      "dataframes": [
       "_sqldf"
      ]
