--- a/orgs/acme/domains/transport/projects/taxinyc/flows/prep/revenue_w_contract/verify_contract.ipynb
+++ b/orgs/acme/domains/transport/projects/taxinyc/flows/prep/revenue_w_contract/verify_contract.ipynb
@@ -40,7 +40,9 @@
     }
    },
    "source": [
-    "## Install libs"
+    "## Install libs\n",
+    "\n",
+    "You can ignore this warning: `Core Python package version(s) changed`"
    ]
   },
   {
